k8s/backend-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: resume-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: resume-backend

  template:
    metadata:
      labels:
        app: resume-backend

    spec:
      containers:
        - name: resume-backend

          image: swayam614/resume-backend:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8000
