k8s/frontend-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: resume-frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: resume-frontend

  template:
    metadata:
      labels:
        app: resume-frontend

    spec:
      containers:
        - name: resume-frontend

          image: swayam614/resume-frontend:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 80
